# lynbrook-app-backend

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
core/: admin.py  auth.py  models.py  notifications.py  permissions.py  schoology.py  serializers.py  urls.py  views.py  wordle.py
core/migrations/: 0001_initial.py  0002_auto_20210802_0802.py  0003_alter_organization_day.py  0004_auto_20210802_0853.py  0005_auto_20210802_0854.py  0006_auto_20210802_0934.py  0007_post_published.py  0008_auto_20210804_0608.py  0009_auto_20210805_0242.py  0010_auto_20210805_2213.py  0011_auto_20210805_2319.py  0012_user_picture_url.py  0013_alter_user_grad_year.py  0014_schedule_name.py  0015_auto_20210806_1758.py  0016_alter_organization_ical_links.py  0017_auto_20210807_0243.py  0018_auto_20210808_0301.py  0019_organizationlink.py  0020_membership_core_membership_user_organization.py  0021_auto_20210809_0921.py  0022_alter_event_code.py  0023_alter_event_users.py  0024_membership_active.py  0025_alter_user_email.py  0026_auto_20210812_0033.py  0027_alter_event_description.py  0028_expopushtoken.py  0029_auto_20210814_0250.py  0030_alter_submission_file.py  0031_user_type.py  0032_alter_user_grad_year.py  0033_alter_scheduleperiod_options.py  0034_auto_20210823_0901.py  0035_alter_event_code.py  0036_alter_event_submission_type.py  0037_organization_location.py  0038_alter_organization_time.py  0039_auto_20210904_1531.py  0040_submission_created_at.py  (+9 more)
core/schoology/: client.py  provider.py  urls.py  views.py
core/templates/: index.html
lynbrook_app/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
scripts/: clubs.csv  clubs_out_fixed.csv  import.py  normalize.py
templates/admin/: login.html
templates/core/: index.html  organization_points.html
templates/homecoming/: index.css  index.html
templates/homecoming/fonts/: Playlist-Script.eot  font.css
templates/homecoming/js/: index.js
