[tool.poetry]
name = "lynbrook-app-backend"
version = "0.1.0"
description = ""
authors = ["Oliver Ni <oliver.ni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
psycopg2 = "^2.9.1"
django-stubs = "^1.8.0"
django-dotenv = "^1.4.2"
django-better-admin-arrayfield = "^1.4.2"
djoser = "^2.1.0"
django-cors-headers = "^3.7.0"
gunicorn = "^20.1.0"
drf-extensions = "^0.7.1"
drf-access-policy = "^1.0.1"
qrcode = "^7.2"
Pillow = "^8.3.1"
python-datauri = "^1.0.0"
djangorestframework-simplejwt = {git = "https://github.com/jazzband/djangorestframework-simplejwt", rev = "master"}
django-storages = "^1.11.1"
google-cloud-storage = "^1.42.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
